Add solutions for 2024 Day 2
Also enabled preview features.